working on the readme

--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
     <caption>Available Bets</caption>
     <tbody id="bets">
     <tr>
-        <td><img src="/img/spinner.gif" alt="" class="spinner"/></td>
+        <td><img src="img/spinner.gif" alt="" class="spinner"/></td>
     </tr>
     </tbody>
 </table>
@@ -70,17 +70,6 @@
     <div id="receipts" class="js-toggle-target"></div>
 </div>
 
-<script>
-    console.log('8????????+  ??????????????????????????????????????????????88');
-    console.log('887777777?  77777777777777777       =77       7:        7OO7');
-    console.log('888     ?I  $$    $$$  $$$$$$  :$$$  $$  $$$$$$$$$   $$OOOOI');
-    console.log('88I   ,ZZI     Z,  Z  ZZZZ$$$  ,I=  .$$       $$$$   OOOOOOI');
-    console.log('8888Z.   $     88I   ?8888ZZZ  .:,   ZZ       ZZZZ   ZZZZZZI');
-    console.log('888      $  8:  88O  88888ZZZ  :ZZZ   Z  ZZZZZZZZZ   ZZZZZZI');
-    console.log('888888888888888$88  888888ZZZ        ZZ       ZZZZ   ZZZZZZ7');
-    console.log('88888888888888888  O888888ZZZZZZZZZZZZZZZZZZZZZZZZZZZZZZZZZ7');
-    console.log('88888888888888888888888888$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$7?');
-</script>
 <script type="text/template" id="bet">
     <tr class="bet">
         <td class="bet__event"></td>
@@ -99,7 +88,7 @@
                 </td>
                 <td class="selection__returns js-returns"></td>
                 <td class="selection__action">
-                    <button type="submit">Place Bet</button>
+                    <button type="submit" class="js-place-bet" disabled>Place Bet</button>
                 </td>
 
             </tr>
@@ -118,6 +107,19 @@
         </tr>
         </tbody>
     </table>
+</script>
+
+
+<script>
+    console.log('8????????+  ??????????????????????????????????????????????88');
+    console.log('887777777?  77777777777777777       =77       7:        7OO7');
+    console.log('888     ?I  $$    $$$  $$$$$$  :$$$  $$  $$$$$$$$$   $$OOOOI');
+    console.log('88I   ,ZZI     Z,  Z  ZZZZ$$$  ,I=  .$$       $$$$   OOOOOOI');
+    console.log('8888Z.   $     88I   ?8888ZZZ  .:,   ZZ       ZZZZ   ZZZZZZI');
+    console.log('888      $  8:  88O  88888ZZZ  :ZZZ   Z  ZZZZZZZZZ   ZZZZZZI');
+    console.log('888888888888888$88  888888ZZZ        ZZ       ZZZZ   ZZZZZZ7');
+    console.log('88888888888888888  O888888ZZZZZZZZZZZZZZZZZZZZZZZZZZZZZZZZZ7');
+    console.log('88888888888888888888888888$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$7?');
 </script>
 </body>
 </html>
