--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head lang="en">
     <meta charset="UTF-8">
-    <title>Sky Betting and Gaming UX Test</title>
+    <title>Sky Betting and Gaming Interaction Design Test</title>
     <script src="js/vendor/jquery-2.1.3.min.js" defer></script>
     <script src="js/main.js" defer></script>
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
@@ -49,7 +49,7 @@
     </style>
 </head>
 <body>
-<h1>Sky Betting and Gaming UX Test</h1>
+<h1>Sky Betting and Gaming Interaction Design Test</h1>
 
 <table id="bet-list">
     <caption>Available Bets</caption>
@@ -109,17 +109,5 @@
     </table>
 </script>
 
-
-<script>
-    console.log('8????????+  ??????????????????????????????????????????????88');
-    console.log('887777777?  77777777777777777       =77       7:        7OO7');
-    console.log('888     ?I  $$    $$$  $$$$$$  :$$$  $$  $$$$$$$$$   $$OOOOI');
-    console.log('88I   ,ZZI     Z,  Z  ZZZZ$$$  ,I=  .$$       $$$$   OOOOOOI');
-    console.log('8888Z.   $     88I   ?8888ZZZ  .:,   ZZ       ZZZZ   ZZZZZZI');
-    console.log('888      $  8:  88O  88888ZZZ  :ZZZ   Z  ZZZZZZZZZ   ZZZZZZI');
-    console.log('888888888888888$88  888888ZZZ        ZZ       ZZZZ   ZZZZZZ7');
-    console.log('88888888888888888  O888888ZZZZZZZZZZZZZZZZZZZZZZZZZZZZZZZZZ7');
-    console.log('88888888888888888888888888$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$7?');
-</script>
 </body>
 </html>
